# sensor-hub-api

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  run-poetry.ps1  run-poetry.sh  run.ps1  run.sh
app/: main.py
app/api/v1/: routes.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: user.py
app/modules/mqtt/: ingest.py  manager.py  router.py  schemas.py  service.py
app/modules/sensors/: model.py  router.py  schemas.py  service.py  websocket_manager.py
app/modules/users/: model.py  router.py  schemas.py  service.py
app/routers/: routes.py  sensors.py  users.py
app/services/: sensor_service.py  user_service.py
app/utils/: common.py
docker/mqtt/: mosquitto.conf
tests/: test_health.py
