[tool.poetry]
name = "sensor-hub-api"
version = "0.1.0"
description = "Plantilla mínima de FastAPI para Sensor Hub API"
authors = ["Tu Nombre <tu.email@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { version = "^0.23.0", extras = ["standard"] }
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
psycopg = {version = "^3.1.0", extras = ["binary"]}
alembic = "^1.12.0"
gmqtt = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
httpx = "^0.25.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
